--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,19 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fast-qrs-detector"
-version = "0.1.2"
+version = "0.2.0"
 description = "Package for detecting QRS in a ECG signal."
 authors = [{name = "Fournier Jean-Charles", email = "jean-charles.fournier@hotmail.com"}]
 license = {file = "LICENSE"}
 readme = "README.md"
 requires-python = ">=3.6"
+# Core dependencies required for qrs_detector
+dependencies = [
+    "numpy>=1.18",
+    "scipy>=1.4",
+    "pandas>=1.0",
+    "matplotlib>=3.3.4"
+]
 
 [project.urls]
 homepage = "https://www.aura.healthcare"
